# shopee-product-filter

./: .gitignore  LINKS.md  README.md  TODO.md  main.py  next_gina_prompt_20250717_095329.md  project_integration_proposal.md  pyproject.toml  shopee_product_filter_integration_plan.md  shopee_product_list_data.db
data/: shopee_product_list_data.db
docs/: memo.md  memo.txt  tmp.md  tmpmemo.md  アプリ仕様書.md  単体テストチェックリスト_草案.md  抽出条件.sql  起動方法.md  開発手順.md
docs/archive/: ISSUE_17_DEBUG_NOTES.md
src/docs/: memo.md  キーワード.txt  抽出条件_SQL.txt  起動方法.md
src/shopee-product-filter/: calc_buy_price.py  calculator.py  parse_product_list.py  product_list_api.py  product_list_streamlit_app_type1.py
src/shopee_product_filter/api/: product_list_api.py
src/shopee_product_filter/app/: product_list_streamlit_app_type1.py  product_list_streamlit_app_type2.py
src/shopee_product_filter/core/: parse_product_list.py
src/shopee_product_filter/experiments/parse_product_list/: parse_category_products.py  parse_search_products.py  parse_shop_products.py
